--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="lo" dir="ltr">
   <head>
     <title>Komayo - ອະທິບາຍການເຮັດພັກດ້ວຍ Ogi</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="ພົບກັບຄວາມເຂົ້າໃຈທີ່ສາມາດລະມັດໄດ້ທີ່ເຮັດພັກກັບຄົນເຂົ້າໃຈ Ogi ທີ່ຫາຍຫາຍໃນ Regency Bar ໃນໂອຊາກາ. ຄວາມເຂົ້າໃຈທີ່ພຽງແຕ່ມີໃນການເດີນທາງຂອງສາຍພັນແລະຄວາມຫລາຍຫລາຍຂອງ Komayo.">
     <meta name="keywords" content="Ogi, ການຫລິ້ນລະບົບ, Shogi, Komayo, Regency Bar">
@@ -20,7 +21,7 @@
     <meta property="og:description" content="ພົບກັບຄວາມເຂົ້າໃຈທີ່ສາມາດລະມັດໄດ້ທີ່ເຮັດພັກກັບຄົນເຂົ້າໃຈ Ogi ທີ່ຫາຍຫາຍໃນ Regency Bar ໃນໂອຊາກາ. ຄວາມເຂົ້າໃຈທີ່ພຽງແຕ່ມີໃນການເດີນທາງຂອງສາຍພັນແລະຄວາມຫລາຍຫລາຍຂອງ Komayo.">
     <meta property="og:image" content="https://lo.komayo.page/img/komayo.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo - Récit d'une Rencontre autour du Ogi">
+    <meta name="twitter:title" content="Komayo - ອະທິບາຍການເຮັດພັກດ້ວຍ Ogi">
     <meta name="twitter:description" content="ພົບກັບຄວາມເຂົ້າໃຈທີ່ສາມາດລະມັດໄດ້ທີ່ເຮັດພັກກັບຄົນເຂົ້າໃຈ Ogi ທີ່ຫາຍຫາຍໃນ Regency Bar ໃນໂອຊາກາ. ຄວາມເຂົ້າໃຈທີ່ພຽງແຕ່ມີໃນການເດີນທາງຂອງສາຍພັນແລະຄວາມຫລາຍຫລາຍຂອງ Komayo.">
     <meta name="twitter:image" content="https://lo.komayo.page/img/komayo.jpeg">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
