feat: new version

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <p>ຄວາມວຸ້ນວາຍໃນຍາມກາງເວັນ, ບໍ່ມີຄວາມໝາຍຄືກັບວ່າໜັກໜ່ວງ, ຄ່ອຍໆຈາງລົງ, ເຮັດໃຫ້ຄວາມງຽບສະຫງົບໃນຍາມກາງຄືນ. ຄວາມ​ຄິດ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ, ວຸ້ນ​ວາຍ​ກັບ​ວຽກ​ງານ​ທີ່​ບໍ່​ເປັນ​ໜ້າ​ສົນ​ໃຈ​ຂອງ​ມື້, ໄດ້​ເລີ່ມ​ແຈ່ມ​ແຈ້ງ​ຂຶ້ນ​ຕໍ່​ໜ້າ​ຄວາມ​ໜາ​ແໜ້ນ​ທີ່​ເຕັມ​ໄປ​ດ້ວຍ​ດວງ​ດາວ ແລະ ຄວາມ​ສະ​ຫງົບ​ງຽບ​ຂອງ​ເມືອງ.</p>
 
-<p><img src="img/1.jpeg" alt="ເມືອງໂອຊາກາຕອນກາງຄືນ. ຕຶກອາຄານສູງຂື້ນ, ຮູບເງົາຂອງພວກມັນຂະຫຍາຍອອກໄປທົ່ວມະຫາສະໝຸດປູຢາງ, ແສງໄຟຂອງຕຶກອາຄານທີ່ສ່ອງແສງຄືກັບດວງດາວ."></p>
+<p><img src="img/1.webp" alt="ເມືອງໂອຊາກາຕອນກາງຄືນ. ຕຶກອາຄານສູງຂື້ນ, ຮູບເງົາຂອງພວກມັນຂະຫຍາຍອອກໄປທົ່ວມະຫາສະໝຸດປູຢາງ, ແສງໄຟຂອງຕຶກອາຄານທີ່ສ່ອງແສງຄືກັບດວງດາວ."></p>
 
 <p>ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ປ່ອຍ​ໃຫ້​ຕົນ​ເອງ​ໄດ້​ຮັບ​ການ​ນໍາ​ພາ​ໂດຍ​ຜ່ານ​ຊອຍ tangled ຂອງ​ເມືອງ. monotony ຂອງມື້ເບິ່ງຄືວ່າຈະລະລາຍໄປທົ່ວທຸກແຈ, ແທນທີ່ດ້ວຍຄວາມລຶກລັບຂອງສິ່ງທີ່ບໍ່ຮູ້. ຮູບຊົງທີ່ອ່ອນນຸ້ມ, ຕ້ອນຮັບຕຶກສູງພາຍໃຕ້ຜ້າມ່ານຕອນກາງຄືນ, ແສງໄຟກະພິບຂອງພວກມັນຕໍ່ກັບທ້ອງຟ້າສີມັງ, ກົງກັນຂ້າມກັບການມີໜ້າຢ້ານກົວຂອງພວກມັນໃນແຕ່ລະມື້.</p>
 
@@ -92,7 +92,7 @@
 
 <p>ຊອກຫາ opponent ສໍາລັບຕອນແລງ, ຕາຂອງຂ້ອຍຖືກຈັບໄດ້ໂດຍແມ່ຍິງນັ່ງຢູ່ຄົນດຽວຢູ່ໃນໂຕະທີ່ງຽບສະຫງົບ. ການປະກົດຕົວທີ່ງຽບສະຫງົບຂອງນາງແລະຄວາມງາມທີ່ອ່ອນໂຍນເຮັດໃຫ້ຄວາມຢາກຮູ້ຂອງຂ້ອຍ. ດ້ວຍ​ບາດກ້າວ​ທີ່​ຕັ້ງ​ໃຈ​ແຕ່​ສຸຂຸມ, ຂ້າພະ​ເຈົ້າ​ໄດ້​ເຂົ້າ​ໄປ​ໃກ້, ວາດ​ພາບ​ດ້ວຍ​ຮອຍ​ຍິ້ມ​ທີ່​ສຸພາບ​ຮຽບຮ້ອຍ ​ແລະ ​ໃຫ້​ລາວ​ຫລິ້ນ​ເກມ.</p>
 
-<p><img src="img/2.jpeg" alt="ແມ່ຍິງ enigmatic ນັ່ງຢູ່ຄົນດຽວຢູ່ໃນຕາຕະລາງ shogi ໃນ alcove ລະມັດລະວັງຂອງແຖບ. ແສງສະຫວ່າງ ແລະເງົາສະແດງເຖິງຄວາມອ່ອນໂຍນຂອງລັກສະນະຂອງນາງ ແລະຄວາມສະຫວ່າງຂອງຕາຂອງນາງ."></p>
+<p><img src="img/2.webp" alt="ແມ່ຍິງ enigmatic ນັ່ງຢູ່ຄົນດຽວຢູ່ໃນຕາຕະລາງ shogi ໃນ alcove ລະມັດລະວັງຂອງແຖບ. ແສງສະຫວ່າງ ແລະເງົາສະແດງເຖິງຄວາມອ່ອນໂຍນຂອງລັກສະນະຂອງນາງ ແລະຄວາມສະຫວ່າງຂອງຕາຂອງນາງ."></p>
 
   </section>
   <section>
@@ -104,7 +104,7 @@
 
 <p>&quot;ມັນເປັນ ogi, ເກມຂອງກະສັດ,&quot; ນາງປະກາດຢ່າງໝັ້ນໃຈ. &quot;ພວກເຮົາແຕ່ລະຄົນມີ 18 ຊິ້ນທີ່ກໍານົດໄວ້ຢູ່ທີ່ນັ້ນເພື່ອເລີ່ມຕົ້ນເກມ.&quot; ການເບິ່ງທີ່ຂົມຂື່ນເຮັດໃຫ້ຕາຂອງນາງຂຶ້ນໃນຂະນະທີ່ນາງເປີດເຜີຍລາຍລະອຽດທີ່ ໜ້າ ສົນໃຈເຫຼົ່ານີ້.</p>
 
-<p><img src="img/3.jpeg" alt="ແມ່ຍິງອະທິບາຍກົດລະບຽບຂອງ ogi ດ້ວຍຄວາມງຽບສະຫງົບແລະຄວາມສະຫງ່າງາມທີ່ບໍ່ໄດ້ພະຍາຍາມ. ການແນມເບິ່ງຂອງລາວສົດໃສດ້ວຍຄວາມກະຕືລືລົ້ນ, ທ່າທາງຂອງລາວມີຄວາມຄ່ອງແຄ້ວແລະແນ່ນອນ."></p>
+<p><img src="img/3.webp" alt="ແມ່ຍິງອະທິບາຍກົດລະບຽບຂອງ ogi ດ້ວຍຄວາມງຽບສະຫງົບແລະຄວາມສະຫງ່າງາມທີ່ບໍ່ໄດ້ພະຍາຍາມ. ການແນມເບິ່ງຂອງລາວສົດໃສດ້ວຍຄວາມກະຕືລືລົ້ນ, ທ່າທາງຂອງລາວມີຄວາມຄ່ອງແຄ້ວແລະແນ່ນອນ."></p>
 
 <p>ນາງກ່າວວ່າ &quot;ໃນກະດານ silhouettes ຂອງ chessboard ນີ້, ຄົນ ໜຶ່ງ ໂດດເດັ່ນ ສຳ ລັບຄວາມສະຫງ່າງາມທີ່ເຫັນໄດ້ຊັດ,&quot; ນາງໄດ້ລະບຸໄວ້, ຊີ້ໄປຫາສ່ວນກາງຂອງຄວາມສະຫງ່າງາມໂດຍສະເພາະ. &quot;ນີ້ແມ່ນເຈົ້າຍິງ. ປະດັບດ້ວຍກຽດສັກສີຂອງຄົນໂງ່ແລະອິດສະລະພາບທີ່ບໍ່ມີຂອບເຂດຈໍາກັດຂອງນັກຂີ່ມ້າ, ນາງໄດ້ຮັກສາຄວາມດີແລະມີອໍານາດເຫນືອ ogiban, ລົມຫາຍໃຈຂອງ romanticism ເຂົ້າໄປໃນການປ່ຽນແປງທີ່ທັນສະໄຫມຂອງ shogi.&quot;</p>
 
@@ -126,7 +126,7 @@
 
 <p>ແລະໃນຂະນະທີ່ຂ້າພະເຈົ້າພະຍາຍາມຮັກສາຕາຂອງຂ້າພະເຈົ້າເປີດ, ນອນ, ສັດຕູ stealthy, ໄດ້ຄອບຄອງ. ຮ່າງ​ກາຍ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ເຮັດ​ໃຫ້​ຄວາມ​ອິດ​ເມື່ອຍ​, ແສງ​ແຖບ​ເຕັ້ນ​ລໍາ​ຕໍ່​ຫນ້າ​ຕາ​ທີ່​ມືດ​ມົວ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​. ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ຕົກ​ເຂົ້າ​ໄປ​ໃນ​ຄວາມ​ມືດ​ອັນ​ງຽບ​ສະ​ຫງົບ, ຮູບ​ພາບ​ສຸດ​ທ້າຍ​ທີ່​ຝັງ​ຢູ່​ໃນ​ຄວາມ​ຊົງ​ຈຳ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ແມ່ນ​ຮອຍ​ຍິ້ມ​ທີ່​ມີ​ໄຊ​ຊະ​ນະ​ຂອງ​ຜູ້​ປໍ​ລະ​ປັກ​ທີ່​ລຶກ​ລັບ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ, ກະ​ພິບ​ກະ​ພິບ​ຄື​ດວງ​ຈັນ​ທີ່​ຫ່າງ​ໄກ​ຢູ່​ໃນ​ທ້ອງ​ຟ້າ​ທີ່​ມືດ​ມົວ.</p>
 
-<p><img src="img/4.jpeg" alt="ຜູ້​ຊາຍ​ລົ້ມ​ລົງ​ຈາກ​ຄວາມ​ເມື່ອຍ​ລ້າ​ຢູ່​ເທິງ ogiban, ເປັນ​ສັນ​ຍານ​ຂອງ​ການ​ເມື່ອຍ​ຂອງ​ຕົນ. ຜູ້ຍິງ, ຮອຍຍິ້ມທີ່ອ່ອນໂຍນຢູ່ເທິງໃບໜ້າຂອງນາງ, ເບິ່ງຄືວ່າພ້ອມທີ່ຈະອອກເດີນທາງ."></p>
+<p><img src="img/4.webp" alt="ຜູ້​ຊາຍ​ລົ້ມ​ລົງ​ຈາກ​ຄວາມ​ເມື່ອຍ​ລ້າ​ຢູ່​ເທິງ ogiban, ເປັນ​ສັນ​ຍານ​ຂອງ​ການ​ເມື່ອຍ​ຂອງ​ຕົນ. ຜູ້ຍິງ, ຮອຍຍິ້ມທີ່ອ່ອນໂຍນຢູ່ເທິງໃບໜ້າຂອງນາງ, ເບິ່ງຄືວ່າພ້ອມທີ່ຈະອອກເດີນທາງ."></p>
 
   </section>
   <section>
