--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <meta property="article:tag" content="ແຖບ Regency">
     <meta property="og:url" content="https://lo.komayo.page/">
     <meta property="og:description" content="ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.">
-    <meta property="og:image" content="https://lo.komayo.page/img/komayo.jpeg">
+    <meta property="og:image" content="https://lo.komayo.page/img/komayo.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້">
     <meta name="twitter:description" content="ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.">
-    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo.jpeg">
+    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/" />
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/" />
