--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="lo" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
-    <title>Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້</title>
+    <title>La Partie Inachevée</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.">
-    <meta name="keywords" content="ໂອກີ, ເກມ​ຍຸດ​ທະ​ສາດ​, ໂຊກິ, Komayo, ແຖບ Regency">
-    <meta property="og:title" content="Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້">
-    <meta property="og:type" content="article">
-    <meta property="article:published_time" content="2023-06-11">
-    <meta property="article:modified_time" content="2023-06-20">
-    <meta property="article:author" content="Cyril Kato">
-    <meta property="article:section" content="ເລື່ອງການນັດພົບ">
-      <meta property="article:tag" content="ໂອກີ">
-      <meta property="article:tag" content="ເກມ​ຍຸດ​ທະ​ສາດ​">
-      <meta property="article:tag" content="ໂຊກິ">
-      <meta property="article:tag" content="Komayo">
-      <meta property="article:tag" content="ແຖບ Regency">
-    <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:description" content="ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.">
-    <meta property="og:image" content="https://lo.komayo.page/img/komayo.webp">
+    <meta name="description" content="Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+">
+    <meta name="keywords" content="Ōgi, Jeu de stratégie, Shōgi, Komayō">
+    <meta property="og:title" content="Komayō: Les Échos Mystiques du Jeu d'Ōgi" />
+    <meta property="og:description" content="On raconte qu'au Japon, dans la région du Kansai, lors des soirs de pleine lune, une magnifique yōkai nommée Komayō apparaît et propose à des passants égarés de jouer une partie d'ōgi, une variante envoûtante du shōgi, un jeu traditionnel japonais.
+Lorsqu'ils acceptent, la partie commence, mais peu à peu, la fatigue les envahit et ils finissent par s'endormir, tandis que la mystérieuse femme absorbe leur énergie vitale.
+Pour retrouver leur salut, ces âmes errantes (yūrei) entament alors un long voyage animées par l'espoir de retrouver Komayō et de conclure les parties d'ōgi restées en suspens.
+Ce livre est le témoignage poignant de l'une d'entre elles." />
+    <meta property="og:image" content="https://lo.komayo.page/img/book-cover.webp" />
+    <meta property="og:url" content="https://amzn.eu/d/3b0mA0n" />
+    <meta property="og:type" content="book" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້">
-    <meta name="twitter:description" content="ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.">
+    <meta name="twitter:title" content="La Partie Inachevée">
+    <meta name="twitter:description" content="Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+">
     <meta name="twitter:image" content="https://lo.komayo.page/img/komayo.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/" />
@@ -62,15 +58,14 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້"/>
+    <meta name="application-name" content="La Partie Inachevée"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-    <link rel="stylesheet" href="css/pico.min.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/base.css?a">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -80,8 +75,9 @@
           "@id": "https://lo.komayo.page/"
         },
         "inLanguage": "lo",
-        "headline": "Komayo - ເລື່ອງຂອງກອງປະຊຸມປະມານ Ogi ໄດ້",
-        "description": "ຄົ້ນພົບເລື່ອງລາວທີ່ຫນ້າຈັບໃຈຂອງການພົບກັບຜູ້ຫຼິ້ນ Ogi ທີ່ລຶກລັບໃນ Regency Bar ຂອງ Osaka. ການສະແດງທີ່ເໜັງຕີງຕໍ່ກັບຄວາມງາມຂອງເກມກະສັດ ແລະ ກິ່ນອາຍຂອງ Komayo.",
+        "headline": "La Partie Inachevée",
+        "description": "Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+",
         "image": {
           "@type": "ImageObject",
           "url": "https://lo.komayo.page/img/komayo.webp"
@@ -90,10 +86,10 @@
           "@type": "Person",
           "name": "Cyril Kato"
         },
-        "datePublished": "2023-06-11",
-        "dateModified": "2023-06-20",
-        "keywords": "ໂອກີ, ເກມ​ຍຸດ​ທະ​ສາດ​, ໂຊກິ, Komayo, ແຖບ Regency",
-        "articleSection": "ເລື່ອງການນັດພົບ"
+        "datePublished": "2023-06-26",
+        "dateModified": "2023-06-27",
+        "keywords": "Ōgi, Jeu de stratégie, Shōgi, Komayō",
+        "articleSection": "Récits de rencontres"
       }
     </script>
   </head>
@@ -101,88 +97,18 @@
     <main>
       <article>
   <header>
-    <h1>Komayo: ສຽງສະທ້ອນຄວາມລຶກລັບຂອງເກມ Ogi</h1>
-    <blockquote>
-      ຂ້າພະເຈົ້າຢາກໃຊ້ເວລາເລັກນ້ອຍເພື່ອສະແດງຄວາມຮູ້ບຸນຄຸນກັບ Komayo ສໍາລັບການແນະນໍາຂ້ອຍໃຫ້ກັບເກມຍຸດທະສາດທີ່ຫນ້າປະທັບໃຈນີ້. ສະເໜ່ແລະຄວາມລຶກລັບຂອງມັນເຮັດໃຫ້ຄວາມປະທັບໃຈອັນຍືນຍົງໃນຊີວິດຂອງຂ້ອຍ. ສິ່ງທີ່ຕໍ່ໄປນີ້ແມ່ນເລື່ອງຂອງກອງປະຊຸມຂອງພວກເຮົາ, ເປັນຄວາມຊົງຈໍາອັນລ້ໍາຄ່າທີ່ຂ້ອຍຕ້ອງການແບ່ງປັນຜ່ານສາຍເຫຼົ່ານີ້.
-
-    </blockquote>
+    <h1>La Partie Inachevée</h1>
   </header>
-  <section>
-    <h2>ຫນີຫ້ອງການ</h2>
+  <p>On raconte qu&#39;au Japon, dans la région du Kansai, lorsque la pleine lune brille haut dans le ciel, une créature aux charmes ensorcelants fait son apparition, cherchant à attirer les passants égarés.</p>
 
-<p>ຫຼັງ ຈາກ ມື້ ທີ່ ຍາວ ນານ ໄດ້ ໃຊ້ ເວ ລາ ໃນ ບັນ ຍາ ກາດ ເປັນ ຫມັນ ແລະ ມີ ລົດ ຊາດ ຂອງ ຫ້ອງ ການ ຂອງ ຂ້າ ພະ ເຈົ້າ, ໃນ ຕອນ ທ້າຍ ຂອງ ການ ລໍ ຖ້າ ຍາວ ຂອງ ມື້ ໄດ້ ມາ ເຖິງ ທີ່ ສຸດ, ຄື ການ ປົດ ປ່ອຍ. ມື້ນັ້ນໄດ້ຫັນໄປສູ່ຄວາມມືດ, ແລະຂ້າພະເຈົ້າໄດ້ປະໄວ້ທາງຫລັງຂອງເຄື່ອງປັບອາກາດທີ່ເຢັນ, ເຢັນເພື່ອເອົາຕົວຂອງມັນເອງເຂົ້າໄປໃນສາຍລົມເຢັນໃນໂອຊາກາທີ່ອ່ອນໂຍນ.</p>
+<p>Belle et mystérieuse, Komayō séduit les infortunés avec son attrait irrésistible. Elle leur propose alors une partie de ōgi, une variante du jeu de stratégie traditionnel japonais shōgi. Ceux qui acceptent son invitation se trouvent bientôt emportés dans un tourbillon de jeu passionnant. Cependant, alors que la partie se poursuit, ils commencent à ressentir une fatigue étrange qui s&#39;infiltre progressivement dans leurs os, les obligeant finalement à succomber à un sommeil inéluctable.</p>
 
-<p>ຄວາມວຸ້ນວາຍໃນຍາມກາງເວັນ, ບໍ່ມີຄວາມໝາຍຄືກັບວ່າໜັກໜ່ວງ, ຄ່ອຍໆຈາງລົງ, ເຮັດໃຫ້ຄວາມງຽບສະຫງົບໃນຍາມກາງຄືນ. ຄວາມ​ຄິດ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ, ວຸ້ນ​ວາຍ​ກັບ​ວຽກ​ງານ​ທີ່​ບໍ່​ເປັນ​ໜ້າ​ສົນ​ໃຈ​ຂອງ​ມື້, ໄດ້​ເລີ່ມ​ແຈ່ມ​ແຈ້ງ​ຂຶ້ນ​ຕໍ່​ໜ້າ​ຄວາມ​ໜາ​ແໜ້ນ​ທີ່​ເຕັມ​ໄປ​ດ້ວຍ​ດວງ​ດາວ ແລະ ຄວາມ​ສະ​ຫງົບ​ງຽບ​ຂອງ​ເມືອງ.</p>
+<p>C&#39;est durant ce sommeil profond que Komayō révèle sa véritable nature. Elle absorbe leur énergie vitale, laissant derrière elle seulement une coquille vide de son ancienne vitalité. Les âmes de ces victimes malheureuses, maintenant transformées en yūrei, sont condamnées à un voyage sans fin. Tourmentées par le désir irrésistible de revoir Komayō et l&#39;espoir de terminer leur partie inachevée de ōgi, elles errent éternellement dans un état de désir non réalisé et de regret inassouvi.</p>
 
-<p><img src="img/1.webp" alt="ເມືອງໂອຊາກາຕອນກາງຄືນ. ຕຶກອາຄານສູງຂື້ນ, ຮູບເງົາຂອງພວກມັນຂະຫຍາຍອອກໄປທົ່ວມະຫາສະໝຸດປູຢາງ, ແສງໄຟຂອງຕຶກອາຄານທີ່ສ່ອງແສງຄືກັບດວງດາວ."></p>
+<p>Komayō incarne ainsi les dangers de la tentation et la fatalité du désir non contrôlé. Les récits de ses victimes servent de mise en garde contre l&#39;attrait de l&#39;inconnu et la poursuite imprudente du plaisir. C&#39;est un avertissement qui résonne à travers les âges, un rappel de la fine ligne qui sépare le désir de la destruction.</p>
 
-<p>ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ປ່ອຍ​ໃຫ້​ຕົນ​ເອງ​ໄດ້​ຮັບ​ການ​ນໍາ​ພາ​ໂດຍ​ຜ່ານ​ຊອຍ tangled ຂອງ​ເມືອງ. monotony ຂອງມື້ເບິ່ງຄືວ່າຈະລະລາຍໄປທົ່ວທຸກແຈ, ແທນທີ່ດ້ວຍຄວາມລຶກລັບຂອງສິ່ງທີ່ບໍ່ຮູ້. ຮູບຊົງທີ່ອ່ອນນຸ້ມ, ຕ້ອນຮັບຕຶກສູງພາຍໃຕ້ຜ້າມ່ານຕອນກາງຄືນ, ແສງໄຟກະພິບຂອງພວກມັນຕໍ່ກັບທ້ອງຟ້າສີມັງ, ກົງກັນຂ້າມກັບການມີໜ້າຢ້ານກົວຂອງພວກມັນໃນແຕ່ລະມື້.</p>
+<p><img src="img/komayo.webp" alt="Cette illustration saisissante dépeint Komayō, une yōkai envoûtante du folklore japonais, captivée par une partie de ōgi sous la lumière argentée de la pleine lune. Sa beauté est presque surnaturelle, ses traits délicats brillent d&#39;une lueur éthérée qui contraste avec l&#39;obscurité environnante. À ses côtés, une victime sans méfiance gît endormie, visiblement épuisée par la partie de jeu. L&#39;énergie vitale semble s&#39;échapper lentement de lui, comme s&#39;il se fondait dans l&#39;ombre. La yōkai, quant à elle, semble à la fois fascinée et indifférente, perdue dans la stratégie de son jeu, symbolisant l&#39;attrait fatal et l&#39;indifférence cruelle de la tentation."></p>
 
-<p>ບັນຍາກາດອັນຄຶກຄື້ນຂອງບັນດາຮ້ານຂາຍເຄື່ອງ, ກິ່ນຫອມຂອງຮ້ານອາຫານຕາມຖະໜົນ ແລະ ສຽງຈົ່ມຂອງການສົນທະນາຕອນກາງຄືນໄດ້ສ້າງພາບພົດຂອງຕົວເມືອງທີ່ຕື່ນເຕັ້ນ. ຈິດໃຈຂອງຂ້ອຍ, ເຖິງແມ່ນວ່າຈະໝົດແຮງ, ໄດ້ຊອກຫາສິ່ງທ້າທາຍທາງປັນຍາ, ເປັນການລົບກວນຈາກຄວາມກັງວົນຂອງມື້. ມັນແມ່ນຕອນນັ້ນທີ່ຂ້ອຍເຫັນປ້າຍທີ່ສຸຂຸມ, Bar de la Régence, ສະຖານທີ່ທີ່ມີຊື່ສຽງບ່ອນທີ່ນັກຫຼິ້ນ shogi ທີ່ມີພອນສະຫວັນແລະສະຫງ່າລາສີທີ່ສຸດຂອງເວລາຂອງພວກເຂົາເຄີຍປະເຊີນຫນ້າກັນ.</p>
-
-<p>ເຊື່ອງໄວ້ຢູ່ໃນຊອຍທີ່ງຽບໆ, ສະຖານທີ່ສັກສິດນີ້ໄດ້ສະເຫນີຕົວມັນເອງໃຫ້ກັບຂ້ອຍ, ກະຊິບຢູ່ໃນໃຈຂອງຂ້ອຍເຖິງການໂທຫາເກມທີ່ອ່ອນໂຍນ. ດ້ວຍຄວາມລຶກລັບແລະຄວາມຢາກຮູ້.</p>
-
-  </section>
-  <section>
-    <h2>ພັກລັດ</h2>
-
-<p>ແສງໄຟອ່ອນໆຂອງ Bar de la Régence ຕ້ອນຮັບຂ້ອຍ, ບັນຍາກາດອັນອົບອຸ່ນຂອງມັນເຮັດໃຫ້ຄວາມຮູ້ສຶກສະຫງົບງຽບ. ຄວາມສະຫງົບຂອງສະຖານທີ່ໄດ້ຖືກ permeated ໂດຍຫຼັກສູດຂອງເກມຈໍານວນຫຼາຍຂອງ shogi, ບໍ່ຕ້ອງສົງໃສ enlivened ຕອນແລງຂອງຫຼາຍລຸ້ນຂອງຜູ້ນໃນການຊອກຫາຂອງການຫລົບຫນີ.</p>
-
-<p>ກ່ອນທີ່ຈະ immersing ຕົນເອງຢູ່ໃນໂລກຂອງເກມ, ຂ້າພະເຈົ້າໄດ້ສັ່ງຈອກ sake ຢູ່ counter ໄດ້. ພື້ນ parquet ວັດ​ຖຸ​ບູ​ຮານ​ປະ​ທ້ວງ​ຢ່າງ​ອ່ອນ​ໂຍນ​ຢູ່​ໃຕ້​ຕີນ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ, ໃນ​ຂະ​ນະ​ທີ່​ຕາ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ປັບ​ກັບ​ແສງ​ສະ​ຫວ່າງ hushed. ສຽງອ່ອນຂອງຊິ້ນສ່ວນ shogi, ສຽງກະຊິບຂອງການສົນທະນາແລະສຽງດັງຂອງແຟນໄດ້ເພີ່ມຄວາມລຶກລັບໃຫ້ກັບບັນຍາກາດ. ກິ່ນຫອມຂອງໄມ້ບູຮານ, ປະສົມກັບຂອງທູບ, ບັນເທົາຄວາມຮູ້ສຶກຂອງຂ້າພະເຈົ້າແລະກະກຽມຂ້າພະເຈົ້າສໍາລັບການມີສ່ວນຮ່ວມທາງປັນຍາທີ່ຈະມາເຖິງ.</p>
-
-<p>ຜູ້ອຸປະຖໍາ, ຜູ້ຊາຍແລະແມ່ຍິງທຸກໄວ, passionately indulged ກັບເກມ shogi ຂອງເຂົາເຈົ້າ. ແຕ່ລະຄົນສະແດງອອກໃນລັກສະນະຂອງຕົນເອງຄວາມເຄັ່ງຕຶງ, ຄວາມສຸກຫຼືຄວາມຜິດຫວັງທີ່ກ່ຽວຂ້ອງກັບການສັກຢາແຕ່ລະຄົນ. ມັນ​ເປັນ​ຍຸດ​ທະ​ສາດ​ບະ​ເລ​ທີ່​ມິດ​ງຽບ ແລະ​ໄດ້​ເປີດ​ເຜີຍ​ຕໍ່​ໜ້າ​ຕາ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ.</p>
-
-<p>ຊອກຫາ opponent ສໍາລັບຕອນແລງ, ຕາຂອງຂ້ອຍຖືກຈັບໄດ້ໂດຍແມ່ຍິງນັ່ງຢູ່ຄົນດຽວຢູ່ໃນໂຕະທີ່ງຽບສະຫງົບ. ການປະກົດຕົວທີ່ງຽບສະຫງົບຂອງນາງແລະຄວາມງາມທີ່ອ່ອນໂຍນເຮັດໃຫ້ຄວາມຢາກຮູ້ຂອງຂ້ອຍ. ດ້ວຍ​ບາດກ້າວ​ທີ່​ຕັ້ງ​ໃຈ​ແຕ່​ສຸຂຸມ, ຂ້າພະ​ເຈົ້າ​ໄດ້​ເຂົ້າ​ໄປ​ໃກ້, ວາດ​ພາບ​ດ້ວຍ​ຮອຍ​ຍິ້ມ​ທີ່​ສຸພາບ​ຮຽບຮ້ອຍ ​ແລະ ​ໃຫ້​ລາວ​ຫລິ້ນ​ເກມ.</p>
-
-<p><img src="img/2.webp" alt="ແມ່ຍິງ enigmatic ນັ່ງຢູ່ຄົນດຽວຢູ່ໃນຕາຕະລາງ shogi ໃນ alcove ລະມັດລະວັງຂອງແຖບ. ແສງສະຫວ່າງ ແລະເງົາສະແດງເຖິງຄວາມອ່ອນໂຍນຂອງລັກສະນະຂອງນາງ ແລະຄວາມສະຫວ່າງຂອງຕາຂອງນາງ."></p>
-
-  </section>
-  <section>
-    <h2>ບົດຮຽນກາງຄືນ</h2>
-
-<p>ການຕອບສະ ໜອງ ຂອງເພິ່ນຕໍ່ຂໍ້ສະ ເໜີ ຂອງຂ້ອຍແມ່ນຮອຍຍິ້ມທີ່ເຮັດໃຫ້ມີໃບ ໜ້າ ຂອງລາວ, ເປັນການຍອມຮັບຢ່າງເຄັ່ງຄັດທີ່ບໍ່ຕ້ອງການ ຄຳ ເວົ້າ.</p>
-
-<p>ດ້ວຍ​ຄວາມ​ເມດ​ຕາ​ທີ່​ບໍ່​ຄາດ​ຄິດ, ນາງ​ໄດ້​ເປີດ​ເຜີຍ​ກະ​ດານ​ເກມ, ກ່ອນ​ໜ້າ​ນີ້​ໄດ້​ເຊື່ອງ​ໄວ້​ພາຍ​ໃຕ້​ຜ້າ​ໄໝ. ການແນມເບິ່ງຂອງຂ້ອຍທັນທີທີ່ຈັບໄດ້ຢູ່ເທິງພື້ນຜິວທີ່ຫຼິ້ນໂດຍບໍ່ຄາດຄິດ, ເບິ່ງຄືວ່າມີຄວາມຫນາແຫນ້ນກວ່າມາດຕະຖານ. ມັນບໍ່ແມ່ນ shogiban ແບບດັ້ງເດີມທີ່ຂ້ອຍເຄີຍເຫັນ, ແຕ່ເປັນຕາຂ່າຍໄຟຟ້າສີ່ຫຼ່ຽມສີ່ຫຼ່ຽມທີ່ມີ 8 ສີ່ຫຼ່ຽມຢູ່ຂ້າງ. ກ່ອນທີ່ຂ້ອຍຈະບອກຄວາມແປກໃຈຂອງຂ້ອຍໄດ້, ຄົນແປກໜ້າທີ່ສະຫງ່າງາມໄດ້ເປັນຜູ້ນຳພາໃນການລຶບລ້າງຄວາມສັບສົນຂອງຂ້ອຍ, ສຽງຂອງນາງປົນກັບອາກາດອ້ອມຂ້າງຄືກັບລົມລະດູຮ້ອນທີ່ອ່ອນໂຍນ.</p>
-
-<p>&quot;ມັນເປັນ ogi, ເກມຂອງກະສັດ,&quot; ນາງປະກາດຢ່າງໝັ້ນໃຈ. &quot;ພວກເຮົາແຕ່ລະຄົນມີ 18 ຊິ້ນທີ່ກໍານົດໄວ້ຢູ່ທີ່ນັ້ນເພື່ອເລີ່ມຕົ້ນເກມ.&quot; ການເບິ່ງທີ່ຂົມຂື່ນເຮັດໃຫ້ຕາຂອງນາງຂຶ້ນໃນຂະນະທີ່ນາງເປີດເຜີຍລາຍລະອຽດທີ່ ໜ້າ ສົນໃຈເຫຼົ່ານີ້.</p>
-
-<p><img src="img/3.webp" alt="ແມ່ຍິງອະທິບາຍກົດລະບຽບຂອງ ogi ດ້ວຍຄວາມງຽບສະຫງົບແລະຄວາມສະຫງ່າງາມທີ່ບໍ່ໄດ້ພະຍາຍາມ. ການແນມເບິ່ງຂອງລາວສົດໃສດ້ວຍຄວາມກະຕືລືລົ້ນ, ທ່າທາງຂອງລາວມີຄວາມຄ່ອງແຄ້ວແລະແນ່ນອນ."></p>
-
-<p>ນາງກ່າວວ່າ &quot;ໃນກະດານ silhouettes ຂອງ chessboard ນີ້, ຄົນ ໜຶ່ງ ໂດດເດັ່ນ ສຳ ລັບຄວາມສະຫງ່າງາມທີ່ເຫັນໄດ້ຊັດ,&quot; ນາງໄດ້ລະບຸໄວ້, ຊີ້ໄປຫາສ່ວນກາງຂອງຄວາມສະຫງ່າງາມໂດຍສະເພາະ. &quot;ນີ້ແມ່ນເຈົ້າຍິງ. ປະດັບດ້ວຍກຽດສັກສີຂອງຄົນໂງ່ແລະອິດສະລະພາບທີ່ບໍ່ມີຂອບເຂດຈໍາກັດຂອງນັກຂີ່ມ້າ, ນາງໄດ້ຮັກສາຄວາມດີແລະມີອໍານາດເຫນືອ ogiban, ລົມຫາຍໃຈຂອງ romanticism ເຂົ້າໄປໃນການປ່ຽນແປງທີ່ທັນສະໄຫມຂອງ shogi.&quot;</p>
-
-<p>ຮອຍຍິ້ມຂອງລາວກວ້າງຂຶ້ນເມື່ອເຫັນຄວາມແປກໃຈຂອງຂ້ອຍ. ແສງເຫຼື້ອມເປັນຕາເຍາະເຍີ້ຍສ່ອງໃສ່ຕາຂອງລາວ, ຄວາມຊົ່ວຊ້າທີ່ພຽງແຕ່ເພີ່ມຄວາມລຶກລັບທີ່ຢູ່ອ້ອມຮອບລາວ. ນາງໄດ້ເລີ່ມຈັດວາງຊິ້ນສ່ວນຕ່າງໆຢູ່ເທິງກະດານ, ນິ້ວມືທີ່ຄ່ອງແຄ້ວແລະຊັດເຈນຂອງນາງເຮັດໃຫ້ສະຫນາມຮົບໃນອະນາຄົດຂອງພວກເຮົາ.</p>
-
-<p>ໃນຂະນະທີ່ນາງກໍາລັງຕັ້ງຊິ້ນສ່ວນ, ຂ້າພະເຈົ້າສັງເກດເຫັນຄວາມແຕກຕ່າງອີກຢ່າງຫນຶ່ງ: ຫໍຄອຍທີ່ຢືນຢູ່ມຸມຂອງ ogiban. ນາງອະທິບາຍວ່າ &quot;ຫອກແບບດັ້ງເດີມຖືກແທນທີ່ດ້ວຍຫໍຄອຍເຫຼົ່ານີ້,&quot; ນາງໄດ້ອະທິບາຍຄືກັບວ່າອ່ານຄວາມຄິດຂອງຂ້ອຍ, &quot;ນໍາເອົາຂະຫນາດພິເສດໃຫ້ກັບການແລ່ນຂອງພວກເຮົາ.&quot;</p>
-
-<p>ຕ່ອນນີ້ໄດ້ຖືກວາງອອກ, ທຸກໆ rook, ທົ່ວໄປ, ທຸກ pawn lined ຂຶ້ນໃນປະສົມກົມກຽວທີ່ສົມບູນແບບ. ຄາດວ່າຈະມີການຕໍ່ສູ້ທີ່ຈະມາເຖິງ, ຂ້າພະເຈົ້າໄດ້ພົບເຫັນຕົວເອງຢ່າງບໍ່ສາມາດຕ້ານທານກັບສິ່ງປິດສະຫນາທີ່ເປີດເຜີຍໃຫມ່ນີ້, ເຮັດໃຫ້ທຸກສິ່ງທີ່ຫນ້າປະທັບໃຈຫຼາຍຂຶ້ນໂດຍເງົາສີທອງຂອງຊິ້ນສ່ວນແລະການແນມເບິ່ງທີ່ສະຫວ່າງຂອງສັດຕູທີ່ລຶກລັບຂອງຂ້ອຍ.</p>
-
-  </section>
-  <section>
-    <h2>ການທົດລອງຂອງພຣະວິນຍານ</h2>
-
-<p>​ໂມງ​ທີ່​ຖືກ​ຕີ​ໃສ່​ຈຸດ​ເວລາ​ທີ່​ຜ່ານ​ໄປ, ​ໃນ​ຂະນະ​ທີ່​ຄວາມ​ງຽບ​ສະຫງັດ​ຂອງ​ການ​ສູ້​ຮົບ​ຖືກ​ລົບ​ກວນ​ພຽງ​ແຕ່​ມີ​ສຽງ​ດັງ​ເລັກໆ​ນ້ອຍໆ​ຢູ່​ເທິງ​ກະດານ. ອະທິການ​ໄດ້​ເຄື່ອນ​ໄຫວ​ດ້ວຍ​ຄວາມ​ຕັ້ງ​ໃຈ, ນັກຮົບ​ໄດ້​ໂດດ​ລົງ​ຢ່າງ​ກ້າຫານ, ​ແລະ ເຈົ້າຍິງ​ໄດ້​ຄອບ​ງຳ​ສະໜາມ​ຮົບ​ດ້ວຍ​ປະສິດທິພາບ​ທີ່​ໜ້າ​ປະ​ທັບ​ໃຈ. ຈັງຫວະທີ່ເກືອບບໍ່ສາມາດຮັບຮູ້ໄດ້ຂອງການຕໍ່ສູ້ເຕັມໄປທົ່ວຫ້ອງ, ເຮັດໃຫ້ມັນມີຄວາມເຄັ່ງຕຶງທີ່ເຫັນໄດ້ຊັດເຈນ.</p>
-
-<p>ດ້ວຍ​ຄວາມ​ຊຳນານ​ທີ່​ບໍ່​ໜ້າ​ສົນ​ໃຈ, ສັດຕູ​ທີ່​ມີ​ຄວາມ​ວິຕົກ​ກັງວົນ​ຂອງ​ຂ້າພະ​ເຈົ້າ​ໄດ້​ຊີ້​ນຳ​ຊິ້ນ​ສ່ວນ​ຂອງ​ລາວ. ຜູ້ທີ່ຖືກຈັບ, ແທນທີ່ຈະຖືກກໍາຈັດ, ໄດ້ຖືກນໍາມາໃຫມ່ຢ່າງຊໍານິຊໍານານ, ໂດດດ່ຽວຢູ່ຫລັງສາຍຂອງຂ້ອຍ, ສັກຢາການປ່ຽນແປງການເຄື່ອນໄຫວເຂົ້າໄປໃນການສູ້ຮົບ. ແຕ່ລະການເຄື່ອນໄຫວແມ່ນບົດຮຽນໃນຍຸດທະວິທີ, ແຕ່ລະຊິ້ນສ່ວນທີ່ເຊື່ອມຕໍ່ກັບອີກອັນຫນຶ່ງໂດຍພັນທະບັດທີ່ເບິ່ງບໍ່ເຫັນໄດ້ແສ່ວດ້ວຍຄວາມລະມັດລະວັງການຜ່າຕັດເກືອບ.</p>
-
-<p>ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ຍຶດ​ໝັ້ນ​ຕໍ່, ຈັບ​ມື​ຢ່າງ​ຕັ້ງ​ໃຈ​ຢ່າງ​ແຂງ​ແຮງ, ປ້ອງ​ກັນ​ການ​ໂຈມ​ຕີ​ຂອງ​ລາວ​ດ້ວຍ​ການ​ປ້ອງ​ກັນ​ຢ່າງ​ຮອບ​ຄອບ. ແຕ່ການຕັດສິນໃຈແຕ່ລະຄົນເບິ່ງຄືວ່າຈະດຶງດູດເອົາພະລັງງານຂອງຂ້ອຍ, ແຕ່ລະການເຄື່ອນໄຫວກາຍເປັນຫນັກແລະຫນັກກວ່າທີ່ຈະປະຕິບັດ. ໜັງຕາຂອງຂ້ອຍເລີ່ມມີນໍ້າໜັກລົງ, ເມື່ອຍລ້າພະຍາຍາມເອົາດິນ.</p>
-
-<p>ແລະໃນຂະນະທີ່ຂ້າພະເຈົ້າພະຍາຍາມຮັກສາຕາຂອງຂ້າພະເຈົ້າເປີດ, ນອນ, ສັດຕູ stealthy, ໄດ້ຄອບຄອງ. ຮ່າງ​ກາຍ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ເຮັດ​ໃຫ້​ຄວາມ​ອິດ​ເມື່ອຍ​, ແສງ​ແຖບ​ເຕັ້ນ​ລໍາ​ຕໍ່​ຫນ້າ​ຕາ​ທີ່​ມືດ​ມົວ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​. ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ຕົກ​ເຂົ້າ​ໄປ​ໃນ​ຄວາມ​ມືດ​ອັນ​ງຽບ​ສະ​ຫງົບ, ຮູບ​ພາບ​ສຸດ​ທ້າຍ​ທີ່​ຝັງ​ຢູ່​ໃນ​ຄວາມ​ຊົງ​ຈຳ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ແມ່ນ​ຮອຍ​ຍິ້ມ​ທີ່​ມີ​ໄຊ​ຊະ​ນະ​ຂອງ​ຜູ້​ປໍ​ລະ​ປັກ​ທີ່​ລຶກ​ລັບ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ, ກະ​ພິບ​ກະ​ພິບ​ຄື​ດວງ​ຈັນ​ທີ່​ຫ່າງ​ໄກ​ຢູ່​ໃນ​ທ້ອງ​ຟ້າ​ທີ່​ມືດ​ມົວ.</p>
-
-<p><img src="img/4.webp" alt="ຜູ້​ຊາຍ​ລົ້ມ​ລົງ​ຈາກ​ຄວາມ​ເມື່ອຍ​ລ້າ​ຢູ່​ເທິງ ogiban, ເປັນ​ສັນ​ຍານ​ຂອງ​ການ​ເມື່ອຍ​ຂອງ​ຕົນ. ຜູ້ຍິງ, ຮອຍຍິ້ມທີ່ອ່ອນໂຍນຢູ່ເທິງໃບໜ້າຂອງນາງ, ເບິ່ງຄືວ່າພ້ອມທີ່ຈະອອກເດີນທາງ."></p>
-
-  </section>
-  <section>
-    <h2>ສຽງສະທ້ອນຂອງອາລຸນ</h2>
-
-<p>ເວລາເບິ່ງຄືວ່າໄດ້ລະເຫີຍໄປ, ກືນເຂົ້າກັບຄວາມມືດທີ່ປົກຄຸມຈິດໃຈຂອງຂ້ອຍ. ການຫັນປ່ຽນໄປສູ່ຄວາມມືດແມ່ນລຽບງ່າຍ ແລະບໍ່ມີສຽງດັງ, ເຮັດໃຫ້ຂ້ອຍຕ້ອງໄປຊອກຫາໝອກທີ່ໜ້າງຶດງໍ້. ຈິດ​ໃຈ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ thrashed ໃນ​ທະ​ເລ​ຂອງ​ຄວາມ​ສັບ​ສົນ, ດີ້ນ​ລົນ​ທີ່​ຈະ​ພົ້ນ​ອອກ​ຈາກ​ຄວາມ​ມືດ.</p>
-
-<p>ເໝືອນດັ່ງເຮືອທີ່ຫຼົງຫາຍໃນຍາມກາງຄືນ, ໃນທີ່ສຸດຂ້າພະເຈົ້າກໍພົບທາງກັບຄືນສູ່ແສງສະຫວ່າງຂອງມື້. ຕາ​ຂອງ​ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ເປີດ​ໄປ​ໃນ​ຫ້ອງ​ທີ່​ເກືອບ​ບໍ່​ມີ​ການ​ປ່ຽນ​ແປງ​, ອາບ​ນ​້​ໍ​ໃນ​ແສງ​ສະ​ຫວ່າງ​ຂອງ​ອາ​ລຸນ​. ogiban ໄດ້​ຢືນ​ຢູ່​ໃນ​ຂະ​ນະ​ທີ່​ຂ້າ​ພະ​ເຈົ້າ​ໄດ້​ປະ​ໄວ້, ເປັນ​ພະ​ຍານ​ທີ່​ງຽບ​ສະ​ຫງົບ​ຂອງ​ການ​ສູ້​ຮົບ​ໃນ​ຕອນ​ກາງ​ຄືນ. ຢ່າງໃດກໍຕາມ, ບ່ອນນັ່ງຂອງ opponent ຂອງຂ້າພະເຈົ້າແມ່ນຫວ່າງເປົ່າ, ກິ່ນອາຍອັນລຶກລັບຂອງຍິງຫນຸ່ມໄດ້ຫາຍໄປຄືກັບຄວາມຝັນໃນຍາມເຊົ້າ.</p>
-
-<p>ນໍ້າໜັກຂອງການບໍ່ຢູ່ຂອງລາວໄດ້ຮູ້ສຶກວ່າ, ເປັນຄວາມຫວ່າງເປົ່າທີ່ບໍ່ມີວັນກໍານົດທີ່ເຮັດໃຫ້ອາກາດຫນັກ, ຫ້ອງງຽບລົງ. ການແນມເບິ່ງຂອງຂ້ອຍໄດ້ເລື່ອນຂ້າມ ogiban ແລະຕັ້ງຢູ່ເທິງແຜ່ນເຈ້ຍທີ່ພັບຢ່າງເປັນລະບຽບຢູ່ຂ້າງກະດານເກມ.</p>
-
-<p>ຄໍາດຽວໄດ້ຖືກຈາລຶກຢູ່ທີ່ນັ້ນ, &quot;ຂໍຂອບໃຈ&quot;, ພ້ອມກັບຊື່ - &quot;Komayo&quot;. ລາຍເຊັນທີ່ສະຫງ່າງາມ, ເປັນເຄື່ອງໝາຍສຸດທ້າຍຂອງການພົບພໍ້ກັນເທື່ອນີ້ ແລະຍັງໂດດເດັ່ນ, ໄດ້ໃຊ້ເວລາຢູ່ທີ່ Bar de la Régence ຫຼີ້ນ ogi ກັບ Komayo ທີ່ຫຼົງໄຫຼ ແລະໜ້າສົນໃຈ.</p>
-
-  </section>
 </article>
 
     </main>
