feat: new version

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="lo" dir="ltr" itemscope itemtype="http://schema.org/Article">
   <head>
-    <title>Komayō</title>
+    <title>ໂຄມາໂຢ</title>
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="In the mystical light of the full moon, discover the story of Komayō, a bewitching yōkai from Japanese folklore. Seductive and deadly, she lures lost souls into the game of ōgi, absorbing their life energy and dooming them to eternal torment. It&#39;s a tale of fatal attraction and unchecked desire, a poignant warning against the dangers of temptation.">
-    <meta name="keywords" content="ghost story, Komayō, obake, ōgi, shōgi, yōkai, yūrei">
-    <meta property="og:title" content="Komayō">
+    <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta name="keywords" content="ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
+    <meta property="og:title" content="ໂຄມາໂຢ">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://lo.komayo.page/">
     <meta property="og:image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
-    <meta property="og:description" content="In the mystical light of the full moon, discover the story of Komayō, a bewitching yōkai from Japanese folklore. Seductive and deadly, she lures lost souls into the game of ōgi, absorbing their life energy and dooming them to eternal torment. It&#39;s a tale of fatal attraction and unchecked desire, a poignant warning against the dangers of temptation.">
-    <meta itemprop="name" content="Komayō">
-    <meta itemprop="description" content="In the mystical light of the full moon, discover the story of Komayō, a bewitching yōkai from Japanese folklore. Seductive and deadly, she lures lost souls into the game of ōgi, absorbing their life energy and dooming them to eternal torment. It&#39;s a tale of fatal attraction and unchecked desire, a poignant warning against the dangers of temptation.">
+    <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta itemprop="name" content="ໂຄມາໂຢ">
+    <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta itemprop="image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayō">
-    <meta name="twitter:description" content="In the mystical light of the full moon, discover the story of Komayō, a bewitching yōkai from Japanese folklore. Seductive and deadly, she lures lost souls into the game of ōgi, absorbing their life energy and dooming them to eternal torment. It&#39;s a tale of fatal attraction and unchecked desire, a poignant warning against the dangers of temptation.">
+    <meta name="twitter:title" content="ໂຄມາໂຢ">
+    <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -43,7 +43,7 @@
       <link rel="alternate" hreflang="vi" href="https://vi.komayo.page/">
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
     <link rel="canonical" href="https://lo.komayo.page/">
-    <meta name="application-name" content="Komayō">
+    <meta name="application-name" content="ໂຄມາໂຢ">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -81,37 +81,37 @@
           "@id": "https://lo.komayo.page/"
         },
         "inLanguage": "lo",
-        "headline": "Komayō",
-        "description": "In the mystical light of the full moon, discover the story of Komayō, a bewitching yōkai from Japanese folklore. Seductive and deadly, she lures lost souls into the game of ōgi, absorbing their life energy and dooming them to eternal torment. It&#39;s a tale of fatal attraction and unchecked desire, a poignant warning against the dangers of temptation.",
+        "headline": "ໂຄມາໂຢ",
+        "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
         "image": "https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp",
         "datePublished": "2023-06-26",
         "dateModified": "2023-06-30",
-        "keywords": "ghost story, Komayō, obake, ōgi, shōgi, yōkai, yūrei"
+        "keywords": "ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
       }
     </script>
   </head>
   <body>
     <main>
-      <h1>Komayō</h1>
+      <h1>ໂຄມາໂຢ</h1>
 <article>
   <header>
-    <h2>The Unfinished Game</h2>
-    <p>It is said that in Japan, in the Kansai region, when the full moon shines high in the sky, <strong>a creature with bewitching charms</strong> appears, seeking to attract lost passers-by.</p>
+    <h2>ເກມທີ່ຍັງບໍ່ທັນສໍາເລັດ</h2>
+    <p>ມີ​ການ​ເວົ້າ​ວ່າ​ໃນ​ປະ​ເທດ​ຍີ່​ປຸ່ນ​, ໃນ​ພາກ​ພື້ນ Kansai​, ໃນ​ເວ​ລາ​ທີ່​ພຣະ​ຈັນ​ເຕັມ​ດວງ​ສ່ອງ​ສູງ​ໃນ​ທ້ອງ​ຟ້າ​, <strong>ມີ​ສັດ​ທີ່​ມີ​ສະ​ເໜ່​ທີ່​ມີ​ສະ​ເໜ່</strong> ໄດ້​ປະກົດ​ຂຶ້ນ​ເພື່ອ​ດຶງ​ດູດ​ຜູ້​ທີ່​ຫຼົງ​ທາງ​ໄປ​ມາ.</p>
 
   </header>
-  <h3>The Seduction of a Dangerous Game</h3>
-  <p>Beautiful and mysterious, <em>Komayō seduces the unfortunate</em> with her irresistible allure. She then offers them a game of <dfn title="the game of kings">ōgi</dfn>, a variation of the <em title="shōgi">traditional Japanese chess</em>. Those who accept her invitation soon find themselves caught up in a whirlwind of thrilling play.</p>
+  <h3>ການລໍ້ລວງຂອງເກມອັນຕະລາຍ</h3>
+  <p>ງາມແລະລຶກລັບ, <em>Komayō ຊັກຈູງຜູ້ໂຊກຮ້າຍ</em>ດ້ວຍການລໍ້ລວງທີ່ບໍ່ສາມາດຕ້ານທານໄດ້. ຈາກນັ້ນ ນາງໄດ້ສະເໜີເກມ <dfn title="ເກມຂອງກະສັດ">ōgi</dfn> ໃຫ້ເຂົາເຈົ້າ, ເຊິ່ງເປັນ<em title="ໂຊກິ">ໝາກຮຸກພື້ນເມືອງຂອງຍີ່ປຸ່ນ</em>. ຜູ້​ທີ່​ຍອມ​ຮັບ​ຄຳ​ເຊື້ອ​ເຊີນ​ຂອງ​ນາງ​ບໍ່​ດົນ​ກໍ​ເຫັນ​ວ່າ​ຕົນ​ເອງ​ຕົກ​ຢູ່​ໃນ​ການ​ຫຼິ້ນ​ທີ່​ໜ້າ​ຕື່ນ​ເຕັ້ນ.</p>
 
   <figure>
-    <img src="img/komayo-in-ogi-game-with-victim.webp" alt="Komayō, a yōkai, is shown during a game of ōgi. At her side, her exhausted victim can be seen." height="1024" width="1024">
-    <figcaption>However, as the game continues, they begin to feel a strange fatigue that gradually seeps into their bones, eventually forcing them to succumb to an inescapable sleep.</figcaption>
+    <img src="img/komayo-in-ogi-game-with-victim.webp" alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້." height="1024" width="1024">
+    <figcaption>ຢ່າງໃດກໍຕາມ, ໃນຂະນະທີ່ເກມຍັງສືບຕໍ່, ພວກເຂົາເລີ່ມຮູ້ສຶກເມື່ອຍລ້າທີ່ຄ່ອຍໆເຂົ້າໄປໃນກະດູກຂອງພວກເຂົາ, ໃນທີ່ສຸດກໍ່ບັງຄັບໃຫ້ພວກເຂົາລົ້ມລົງດ້ວຍການນອນທີ່ບໍ່ສາມາດຫຼີກລ່ຽງໄດ້.</figcaption>
   </figure>
-  <h3>Komayō&#39;s Trap</h3>
-  <p>It&#39;s during this deep sleep that Komayō reveals her true nature. She absorbs their vital energy, leaving behind only an empty shell of her former vitality. The souls of these unfortunate victims, now transformed into <em>yūrei</em>, are condemned to an endless journey. Tormented by the irresistible desire to see Komayō again and the hope of completing their unfinished ōgi game, they wander eternally in a state of unfulfilled desire and unfulfilled regret.</p>
+  <h3>ກັບດັກຂອງ Komayō</h3>
+  <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
 
   <footer>
-    <h2>Desire and Destruction</h2>
-    <p>Komayō thus embodies the dangers of <em>temptation</em> and the fatality of <em>uncontrolled desire</em>. <a href="https://amzn.eu/d/7w6vHjX" rel="sponsored" target="_blank">The stories of her victims</a> serve as a warning against the lure of the unknown and the reckless pursuit of pleasure. It&#39;s a warning that echoes through the ages, a reminder of the fine line that separates desire from destruction.</p>
+    <h2>ຄວາມປາຖະຫນາແລະການທໍາລາຍ</h2>
+    <p>ດັ່ງນັ້ນ Komayō embodies ອັນຕະລາຍຂອງ <em>temptation</em> ແລະຄວາມຕາຍຂອງ <em>uncontrolled ຄວາມປາຖະຫນາ</em>. <a href="https://amzn.eu/d/7w6vHjX" rel="sponsored" target="_blank">ເລື່ອງລາວຂອງຜູ້ຖືກເຄາະຮ້າຍ</a> ເປັນການເຕືອນໄພຕໍ່ກັບການລໍ້ລວງຂອງຄົນທີ່ບໍ່ຮູ້ຕົວ ແລະຄົນບໍ່ສົນໃຈ. ການສະແຫວງຫາຄວາມສຸກ. ມັນ​ເປັນ​ການ​ເຕືອນ​ໄພ​ທີ່​ດັງ​ກ້ອງ​ໄປ​ທົ່ວ​ອາ​ຍຸ​ການ, ເປັນ​ການ​ເຕືອນ​ຂອງ​ເສັ້ນ​ອັນ​ດີ​ທີ່​ແຍກ​ຄວາມ​ປາ​ຖະ​ຫນາ​ຈາກ​ການ​ທໍາ​ລາຍ.</p>
 
   </footer>
 </article>
